@@ -63,7 +63,7 @@ class Renderer(base.Renderer):
 
     @property
     def available(self):
-        return len(self._data())
+        return self.data.count > 0 and len(self._data())
 
     def published_events(self):
         return self._data()
